name:                ff-mesh-metrics
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/ff-mesh-metrics#readme
license:             GPL-3
license-file:        LICENSE
author:              Jonas Platte
maintainer:          mail@jonasplatte.de
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable ff-mesh-metrics
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       GraphJson

  build-depends:       base,
                       aeson,
                       bytestring,
                       mtl,
                       safe

  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

source-repository head
  type:     git
  location: https://github.com/jplatte/ff-mesh-metrics
